// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pill - Listbox of Pills renders a default listbox of pills 1`] = `
<div
  className="slds-pill_container"
>
  <div
    className="slds-assistive-text"
    id="listbox-pill-default"
  >
    Press delete or backspace to remove
  </div>
  <ul
    aria-describedby="listbox-pill-default"
    aria-label="Selected Options:"
    aria-orientation="horizontal"
    className="slds-listbox slds-listbox_horizontal"
    role="listbox"
  >
    <li
      className="slds-listbox-item"
      role="presentation"
    >
      <span
        aria-selected="true"
        className="slds-pill"
        role="option"
        tabIndex="0"
      >
        <span
          className="slds-pill__label"
          title="Full pill label verbiage mirrored here"
        >
          Pill Label
        </span>
        <span
          className="slds-icon_container slds-pill__remove"
          title="Remove"
        >
          <svg
            aria-hidden={true}
            className="slds-icon slds-icon_x-small slds-icon-text-default"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
            />
          </svg>
        </span>
      </span>
    </li>
    <li
      className="slds-listbox-item"
      role="presentation"
    >
      <span
        aria-selected="true"
        className="slds-pill"
        role="option"
      >
        <span
          className="slds-pill__label"
          title="Full pill label verbiage mirrored here"
        >
          Pill Label
        </span>
        <span
          className="slds-icon_container slds-pill__remove"
          title="Remove"
        >
          <svg
            aria-hidden={true}
            className="slds-icon slds-icon_x-small slds-icon-text-default"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
            />
          </svg>
        </span>
      </span>
    </li>
  </ul>
</div>
`;

exports[`Pill - Listbox of Pills renders a listbox of pills - bare 1`] = `
<div
  className="slds-pill_container"
>
  <div
    className="slds-assistive-text"
    id="listbox-pills-bare"
  >
    Press delete or backspace to remove
  </div>
  <ul
    aria-describedby="listbox-pills-bare"
    aria-label="Selected Options:"
    aria-orientation="horizontal"
    className="slds-listbox slds-listbox_horizontal"
    role="listbox"
  >
    <li
      className="slds-listbox-item"
      role="presentation"
    >
      <span
        aria-selected="true"
        className="slds-pill slds-pill_bare"
        role="option"
        tabIndex="0"
      >
        <span
          className="slds-pill__label"
          title="Full pill label verbiage mirrored here"
        >
          Pill Label
        </span>
        <span
          className="slds-icon_container slds-pill__remove"
          title="Remove"
        >
          <svg
            aria-hidden={true}
            className="slds-icon slds-icon_x-small slds-icon-text-default"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
            />
          </svg>
        </span>
      </span>
    </li>
    <li
      className="slds-listbox-item"
      role="presentation"
    >
      <span
        aria-selected="true"
        className="slds-pill slds-pill_bare"
        role="option"
      >
        <span
          className="slds-pill__label"
          title="Full pill label verbiage mirrored here"
        >
          Pill Label
        </span>
        <span
          className="slds-icon_container slds-pill__remove"
          title="Remove"
        >
          <svg
            aria-hidden={true}
            className="slds-icon slds-icon_x-small slds-icon-text-default"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
            />
          </svg>
        </span>
      </span>
    </li>
  </ul>
</div>
`;

exports[`Pill - Listbox of Pills renders a listbox of pills - group 1`] = `
<div>
  <div
    className="slds-combobox_container"
  />
  <div
    className="slds-listbox_selection-group"
  >
    <ul
      aria-label="Selected Options:"
      aria-orientation="horizontal"
      className="slds-listbox slds-listbox_horizontal"
      role="listbox"
    >
      <li
        className="slds-listbox-item"
        role="presentation"
      >
        <span
          aria-selected="true"
          className="slds-pill"
          role="option"
          tabIndex="0"
        >
          <span
            className="slds-pill__label"
            title="Full pill label verbiage mirrored here"
          >
            Pill Label
          </span>
          <span
            className="slds-icon_container slds-pill__remove"
            title="Remove"
          >
            <svg
              aria-hidden={true}
              className="slds-icon slds-icon_x-small slds-icon-text-default"
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
              />
            </svg>
          </span>
        </span>
      </li>
      <li
        className="slds-listbox-item"
        role="presentation"
      >
        <span
          aria-selected="true"
          className="slds-pill"
          role="option"
        >
          <span
            className="slds-pill__label"
            title="Full pill label verbiage mirrored here"
          >
            Pill Label
          </span>
          <span
            className="slds-icon_container slds-pill__remove"
            title="Remove"
          >
            <svg
              aria-hidden={true}
              className="slds-icon slds-icon_x-small slds-icon-text-default"
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
              />
            </svg>
          </span>
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Pill - Listbox of Pills renders a listbox of pills with an avatar 1`] = `
<div
  className="slds-pill_container"
>
  <div
    className="slds-assistive-text"
    id="listbox-pill-with-avatar"
  >
    Press delete or backspace to remove
  </div>
  <ul
    aria-describedby="listbox-pill-with-avatar"
    aria-label="Selected Options:"
    aria-orientation="horizontal"
    className="slds-listbox slds-listbox_horizontal"
    role="listbox"
  >
    <li
      className="slds-listbox-item"
      role="presentation"
    >
      <span
        aria-selected="true"
        className="slds-pill"
        role="option"
        tabIndex="0"
      >
        <span
          className="slds-avatar slds-avatar_x-small slds-pill__icon_container"
        >
          <img
            alt="Person name"
            src="/assets/images/avatar2.jpg"
            title="User avatar"
          />
        </span>
        <span
          className="slds-pill__label"
          title="Full pill label verbiage mirrored here"
        >
          Pill Label
        </span>
        <span
          className="slds-icon_container slds-pill__remove"
          title="Remove"
        >
          <svg
            aria-hidden={true}
            className="slds-icon slds-icon_x-small slds-icon-text-default"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
            />
          </svg>
        </span>
      </span>
    </li>
    <li
      className="slds-listbox-item"
      role="presentation"
    >
      <span
        aria-selected="true"
        className="slds-pill"
        role="option"
      >
        <span
          className="slds-avatar slds-avatar_x-small slds-pill__icon_container"
        >
          <img
            alt="Person name"
            src="/assets/images/avatar2.jpg"
            title="User avatar"
          />
        </span>
        <span
          className="slds-pill__label"
          title="Full pill label verbiage mirrored here"
        >
          Pill Label
        </span>
        <span
          className="slds-icon_container slds-pill__remove"
          title="Remove"
        >
          <svg
            aria-hidden={true}
            className="slds-icon slds-icon_x-small slds-icon-text-default"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
            />
          </svg>
        </span>
      </span>
    </li>
  </ul>
</div>
`;

exports[`Pill - Listbox of Pills renders a listbox of pills with an icon 1`] = `
<div
  className="slds-pill_container"
>
  <div
    className="slds-assistive-text"
    id="listbox-pill-with-icon"
  >
    Press delete or backspace to remove
  </div>
  <ul
    aria-describedby="listbox-pill-with-icon"
    aria-label="Selected Options:"
    aria-orientation="horizontal"
    className="slds-listbox slds-listbox_horizontal"
    role="listbox"
  >
    <li
      className="slds-listbox-item"
      role="presentation"
    >
      <span
        aria-selected="true"
        className="slds-pill"
        role="option"
        tabIndex="0"
      >
        <span
          className="slds-icon_container slds-icon-standard-account slds-pill__icon_container"
          title="Account"
        >
          <svg
            aria-hidden={true}
            className="slds-icon"
          >
            <use
              xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Account
          </span>
        </span>
        <span
          className="slds-pill__label"
          title="Full pill label verbiage mirrored here"
        >
          Pill Label
        </span>
        <span
          className="slds-icon_container slds-pill__remove"
          title="Remove"
        >
          <svg
            aria-hidden={true}
            className="slds-icon slds-icon_x-small slds-icon-text-default"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
            />
          </svg>
        </span>
      </span>
    </li>
    <li
      className="slds-listbox-item"
      role="presentation"
    >
      <span
        aria-selected="true"
        className="slds-pill"
        role="option"
      >
        <span
          className="slds-icon_container slds-icon-standard-case slds-pill__icon_container"
          title="Case"
        >
          <svg
            aria-hidden={true}
            className="slds-icon"
          >
            <use
              xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#case"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Case
          </span>
        </span>
        <span
          className="slds-pill__label"
          title="Full pill label verbiage mirrored here"
        >
          Pill Label
        </span>
        <span
          className="slds-icon_container slds-pill__remove"
          title="Remove"
        >
          <svg
            aria-hidden={true}
            className="slds-icon slds-icon_x-small slds-icon-text-default"
          >
            <use
              xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
            />
          </svg>
        </span>
      </span>
    </li>
  </ul>
</div>
`;

exports[`Pill renders a pill 1`] = `
<span
  className="slds-pill slds-pill_link"
>
  <a
    className="slds-pill__action"
    href="#"
    onClick={[Function]}
    title="Full pill label verbiage mirrored here"
  >
    <span
      className="slds-pill__label"
    >
      Pill Label
    </span>
  </a>
  <button
    className="slds-button slds-button_icon slds-button_icon slds-pill__remove"
    onClick={[Function]}
    title="Remove"
  >
    <svg
      aria-hidden={true}
      className="slds-button__icon"
    >
      <use
        xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
      />
    </svg>
    <span
      className="slds-assistive-text"
    >
      Remove
    </span>
  </button>
</span>
`;

exports[`Pill renders a pill in a container - bare (deprecated) 1`] = `
<div
  className="slds-pill_container slds-pill_container_bare"
>
  <span
    className="slds-pill slds-pill_link"
  >
    <a
      className="slds-pill__action"
      href="#"
      onClick={[Function]}
      title="Full pill label verbiage mirrored here"
    >
      <span
        className="slds-pill__label"
      >
        Pill Label
      </span>
    </a>
    <button
      className="slds-button slds-button_icon slds-button_icon slds-pill__remove"
      onClick={[Function]}
      title="Remove"
    >
      <svg
        aria-hidden={true}
        className="slds-button__icon"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        Remove
      </span>
    </button>
  </span>
  <span
    className="slds-pill slds-pill_link"
  >
    <a
      className="slds-pill__action"
      href="#"
      onClick={[Function]}
      title="Full pill label verbiage mirrored here"
    >
      <span
        className="slds-pill__label"
      >
        Pill Label
      </span>
    </a>
    <button
      className="slds-button slds-button_icon slds-button_icon slds-pill__remove"
      onClick={[Function]}
      title="Remove"
    >
      <svg
        aria-hidden={true}
        className="slds-button__icon"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        Remove
      </span>
    </button>
  </span>
  <span
    className="slds-pill slds-pill_link"
  >
    <a
      className="slds-pill__action"
      href="#"
      onClick={[Function]}
      title="Full pill label verbiage mirrored here"
    >
      <span
        className="slds-pill__label"
      >
        Pill Label
      </span>
    </a>
    <button
      className="slds-button slds-button_icon slds-button_icon slds-pill__remove"
      onClick={[Function]}
      title="Remove"
    >
      <svg
        aria-hidden={true}
        className="slds-button__icon"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        Remove
      </span>
    </button>
  </span>
</div>
`;

exports[`Pill renders a pill in a container 1`] = `
<div
  className="slds-pill_container"
>
  <span
    className="slds-pill slds-pill_link"
  >
    <a
      className="slds-pill__action"
      href="#"
      onClick={[Function]}
      title="Full pill label verbiage mirrored here"
    >
      <span
        className="slds-pill__label"
      >
        Pill Label
      </span>
    </a>
    <button
      className="slds-button slds-button_icon slds-button_icon slds-pill__remove"
      onClick={[Function]}
      title="Remove"
    >
      <svg
        aria-hidden={true}
        className="slds-button__icon"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        Remove
      </span>
    </button>
  </span>
  <span
    className="slds-pill slds-pill_link"
  >
    <a
      className="slds-pill__action"
      href="#"
      onClick={[Function]}
      title="Full pill label verbiage mirrored here"
    >
      <span
        className="slds-pill__label"
      >
        Pill Label
      </span>
    </a>
    <button
      className="slds-button slds-button_icon slds-button_icon slds-pill__remove"
      onClick={[Function]}
      title="Remove"
    >
      <svg
        aria-hidden={true}
        className="slds-button__icon"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        Remove
      </span>
    </button>
  </span>
  <span
    className="slds-pill slds-pill_link"
  >
    <a
      className="slds-pill__action"
      href="#"
      onClick={[Function]}
      title="Full pill label verbiage mirrored here"
    >
      <span
        className="slds-pill__label"
      >
        Pill Label
      </span>
    </a>
    <button
      className="slds-button slds-button_icon slds-button_icon slds-pill__remove"
      onClick={[Function]}
      title="Remove"
    >
      <svg
        aria-hidden={true}
        className="slds-button__icon"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        Remove
      </span>
    </button>
  </span>
</div>
`;

exports[`Pill renders a pill that is truncated 1`] = `
<div
  className="slds-pill_container"
>
  <span
    className="slds-pill slds-pill_link"
  >
    <a
      className="slds-pill__action"
      href="#"
      onClick={[Function]}
      title="Pill label that is longer than the area that contains it"
    >
      <span
        className="slds-pill__label"
      >
        Pill label that is longer than the area that contains it
      </span>
    </a>
    <button
      className="slds-button slds-button_icon slds-button_icon slds-pill__remove"
      onClick={[Function]}
      title="Remove"
    >
      <svg
        aria-hidden={true}
        className="slds-button__icon"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        Remove
      </span>
    </button>
  </span>
</div>
`;

exports[`Pill renders a pill with an avatar 1`] = `
<span
  className="slds-pill slds-pill_link"
>
  <span
    className="slds-pill__icon_container"
  >
    <span
      className="slds-avatar slds-avatar_circle"
      title="User avatar"
    >
      <img
        alt="Person name"
        src="/assets/images/avatar2.jpg"
        title="User avatar"
      />
    </span>
  </span>
  <a
    className="slds-pill__action"
    href="#"
    onClick={[Function]}
    title="Full pill label verbiage mirrored here"
  >
    <span
      className="slds-pill__label"
    >
      Pill Label
    </span>
  </a>
  <button
    className="slds-button slds-button_icon slds-button_icon slds-pill__remove"
    onClick={[Function]}
    title="Remove"
  >
    <svg
      aria-hidden={true}
      className="slds-button__icon"
    >
      <use
        xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
      />
    </svg>
    <span
      className="slds-assistive-text"
    >
      Remove
    </span>
  </button>
</span>
`;

exports[`Pill renders a pill with an error 1`] = `
<span
  className="slds-pill slds-pill_link slds-has-error"
>
  <span
    className="slds-pill__icon_container"
  >
    <span
      className="slds-icon_container"
      title="Error"
    >
      <svg
        aria-hidden={true}
        className="slds-icon slds-icon-text-error"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#error"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        Warning
      </span>
    </span>
  </span>
  <a
    className="slds-pill__action"
    href="#"
    onClick={[Function]}
    title="Full pill label verbiage mirrored here"
  >
    <span
      className="slds-pill__label"
    >
      Pill Label
    </span>
  </a>
  <button
    className="slds-button slds-button_icon slds-button_icon slds-pill__remove"
    onClick={[Function]}
    title="Remove"
  >
    <svg
      aria-hidden={true}
      className="slds-button__icon"
    >
      <use
        xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
      />
    </svg>
    <span
      className="slds-assistive-text"
    >
      Remove
    </span>
  </button>
</span>
`;

exports[`Pill renders a pill with an icon 1`] = `
<span
  className="slds-pill slds-pill_link"
>
  <span
    className="slds-pill__icon_container"
  >
    <span
      className="slds-icon_container slds-icon-standard-account"
      title="Account"
    >
      <svg
        aria-hidden={true}
        className="slds-icon"
      >
        <use
          xlinkHref="/assets/icons/standard-sprite/svg/symbols.svg#account"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        Account
      </span>
    </span>
  </span>
  <a
    className="slds-pill__action"
    href="#"
    onClick={[Function]}
    title="Full pill label verbiage mirrored here"
  >
    <span
      className="slds-pill__label"
    >
      Pill Label
    </span>
  </a>
  <button
    className="slds-button slds-button_icon slds-button_icon slds-pill__remove"
    onClick={[Function]}
    title="Remove"
  >
    <svg
      aria-hidden={true}
      className="slds-button__icon"
    >
      <use
        xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#close"
      />
    </svg>
    <span
      className="slds-assistive-text"
    >
      Remove
    </span>
  </button>
</span>
`;
